--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Hanan's First Cool Webpage!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Hanan's First Cool Webpage!</title>
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
-    <header>
+<body class="works_on_smartphone"> <header>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
