--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Hanan's First Cool Webpage!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hanan's First Cool Webpage!</title>
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body class="works_on_smartphone"> <header>
+<body class="works_on_smartphone">
+    <header>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li class="logo">&#128640;</li> <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
     </header>
