--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -32,7 +32,7 @@
             <div>
                 <h1>Get schooled</h1>
                 <p>SMILES, GRIN, LAUGH</p>
-                <button>REGISTER FOR FREE</button>
+                <button class="button-primary">REGISTER FOR FREE</button>
             </div>
             <div>
                 <h2>Learn from the pros</h2>
@@ -181,7 +181,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
-            <button>REGISTER FOR FREE</button>
+           <button class="button-primary">REGISTER FOR FREE</button>
         </section>
 
         <!-- FAQ Section -->
