feat: Complete page styling with Footer section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -214,20 +214,18 @@
     </main>
 
     <!-- ======================= FOOTER ======================= -->
-    <footer>
-        <div>
-            <div>
-                <img src="images/logo.png" alt="Smile School Logo">
-                <div>
-                    <!-- Note: You will need to get the real social media icons -->
-                    <a href="#"><img src="images/facebook_icon.png" alt="Facebook icon"></a>
-                    <a href="#"><img src="images/twitter_icon.png" alt="Twitter icon"></a>
-                    <a href="#"><img src="images/instagram_icon.png" alt="Instagram icon"></a>
-                </div>
-            </div>
-            <p>©smileschool 2020</p>
+<footer>
+    <div class="footer-container">
+        <div class="footer-row">
+            <img src="images/logo.png" alt="Smile School Logo" class="footer-logo">
+            <div class="social-icons">
+    <a href="#"><img src="images/icon_facebook.png" alt="Facebook icon"></a>
+    <a href="#"><img src="images/icon_twitter.png" alt="Twitter icon"></a>
+    <a href="#"><img src="images/icon_instagram.png" alt="Instagram icon"></a>
         </div>
-    </footer>
+        <p class="copyright-text">©smileschool 2020</p>
+    </div>
+</footer>
 
 </body>
 </html>
